<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Darts with Friends</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="splash_text">Darts with Friends</string>
    <string name="dartboard">Image of a dartboard</string>
    <string name="game_type_501301">501/301</string>
    <string name="game_type_cricket">Cricket</string>
    <string name="game501">501</string>
    <string name="game301">301</string>
    <string name="title_activity_scoreboard501301">Scoreboard501301Activity</string>
    <string name="score_you">You</string>
    <string name="score_opponent">Opponent</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_opponent_selection">OpponentSelectionActivity</string>
    <string name="add_entry">Add entry</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_id">801232726610739</string>
    <string name="create_game">Create Game</string>
    <string name="join_game">Join Game</string>
    <string name="darts_with_friends">Darts with Friends</string>
    <string name="logout">Log Out</string>
    <string name="waiting">Waiting</string>
    <string name="waiting_for_opponent">Waiting for opponent</string>
    <string name="title_activity_score501301_selection">Score501301Selection</string>
    <string name="bullseye">BULLSEYE</string>
    <string name="miss">MISS</string>
    <string name="title_activity_scoreboard_cricket">ScoreboardCricketActivity</string>
    <string name="title_activity_friend_selection">FriendSelectionActivity</string>
    <string name="triple">Triple</string>
    <string name="doubleT">Double</string>
    <string name="single">Single</string>
    <string name="slash">/</string>
    <string name="bulls">BULLS</string>
    <string name="title_activity_sign_up">SignUpActivity</string>

</resources>
