<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scoreboard"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:background="@drawable/dark_grey_stroke"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dark_grey_stroke"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/score_you"
                android:textColor="#343434"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/starting_score_you"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/game301"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="0.5"
            android:background="@drawable/dark_grey_stroke"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/dark_grey_stroke"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/score_opponent"
                android:textColor="#343434"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/starting_score_opponent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/game301"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <ImageButton
        android:id="@+id/add_entry"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/add_entry"
        android:elevation="10dp"
        android:src="@android:drawable/ic_menu_edit" />
</RelativeLayout>